# NICPROV

./: README.md
device/application/dma_copy/src/: driver_config.h  main.o.ur-safe  meson.build  modules.order  ppm_events_public.h  ppm_fillers.o.ur-safe  result.txt  scap.mod.c
device/samples/: common.h
device/src/: dkms.conf  dma_copy.c  dma_copy_core.c  dma_copy_core.h  dma_copy_core_backup.c  dma_copy_core_multiple.c  main.c  ppm.h
device/utils/: common.c
host/initiation/: scap.h
host/initiation/kmod/: scap_kmod.c
host/kmodule/: Makefile  main.c  ppm_events_public.h
host/module/: ppm_events.h
host/userspace/: scap_savefile.c
host/userspace/engine/kmod/: CMakeLists.txt
host/userspace/examples/01-open/: scap_open.c
